[project]
name = "calibrationdb"
version = "0.1.0"
description = "A Python package for managing calibration parameters in a SQLite database"
readme = "README.md"
requires-python = ">=3.6"
# license = "MIT AND (Apache-2.0 OR BSD-2-Clause)"
authors = [
    {name = "Ivan MeL"}
]
keywords = ["calibration", "database", "sqlite", "parameters"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
caldb = "calibrationdb.cal_db_cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"